2019-12-31 Kim Walisch  <kim.walisch@gmail.com>

  Version 2.3 released.

  * Up to 10% speedup on ARM NEON.
  * Fix unaligned memory access on ARM.

2018-01-13 Kim Walisch  <kim.walisch@gmail.com>

  Version 2.2 released.

  * Up to 6x faster on old x86 CPUs without POPCNT.

2017-11-10 Kim Walisch  <kim.walisch@gmail.com>

  Version 2.1 released.

  * Up to 20% ARM NEON speedup.
  * test/test1.cpp: Add only 1 bits test case.
  * test/test2.c: Add only 1 bits test case.

2017-10-27 Kim Walisch  <kim.walisch@gmail.com>

  Version 2.0 released.

  * Add AVX512 support.
  * Support AVX2 and AVX512 for the MSVC compiler.
  * Support CPUID for MSVC and the C programming language.

2017-09-09 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.9 released.

  * libpopcnt.h: Fix MSVC POPCNT detection.

2017-04-24 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.8 released.

  * Fixed "illegal instruction" runtime crash with GCC 4.4.7.
  * benchmark.cpp: Print statistics and algorithm name.
  * Reduce CMake minimum version to 2.8.

2017-04-08 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.7 released.

  * Refactor ARM NEON popcount algorithm.

2017-04-04 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.6 released.

  * Add ARM NEON popcount algorithm.
  * Fix x86 segmentation fault for CPUs without POPCNT.

2017-04-02 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.5 released.

  * libpopcnt.h now supports C and C++!
  * Use CMake build system.
  * test2.c: Add C test.
  * Fix clang-cl bug on Windows.

2017-04-01 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.4 released.

  * libpopcnt.h: Fix compiler warning.

2017-03-30 Kim Walisch  <kim.walisch@gmail.com>

  Version 1.3 released.

  libpopcnt.h is now C++ only (previously C/C++), the reason being
  that the cpuid check cannot be made thread-safe using plain C,
  whereas in C++ its trivial (Meyers Singleton).

  * Add benchmark.cpp.
  * Use AVX2 for arrays >= 512 bytes (previously 1024).
  * Improve Makefile.
