@@ -1,6 +1,6 @@
 BSD 2-Clause License
 
-Copyright (c) 2016 - 2019, Kim Walisch
+Copyright (c) 2016 - 2020, Kim Walisch
 Copyright (c) 2016 - 2019, Wojciech Muła
 
 All rights reserved.
