@@ -154,27 +154,13 @@ For other CPU architectures a fast integer popcount algorithm is used.
 
 ## How to compile
 
-For GCC and Clang compilation does not require any special compiler flags (like
-```-mavx2```)!
+```libpopcnt.h``` does not require any special compiler flags like ```-mavx2```!
+In order to get the best performance we recommend however to compile with
+optimizations enabled e.g. ```-O3``` or ```-O2```.
 
 ```bash
 cc  -O3 program.c
 c++ -O3 program.cpp
-```
-
-### Microsoft Visual C++
-
-Using the MSVC compiler ```libpopcnt.h``` will only use ```POPCNT```
-by default. You can enable AVX2 or AVX512 to get the best
-performance but then your program requires a CPU with
-AVX2 or AVX512 support.
-
-```bash
-# Enable AVX2
-cl /O2 /arch:AVX2 program.cpp
-
-# Enable AVX512
-cl /O2 /arch:AVX512 program.cpp
 ```
 
 ## Development
